src/test/ui/self/elision/ref-mut-struct-async.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-struct-async.rs:15:56
   |
LL |     async fn ref_Struct(self: &mut Struct, f: &u32) -> &u32 {
   |                                                        ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-struct-async.rs:21:65
   |
LL |     async fn box_ref_Struct(self: Box<&mut Struct>, f: &u32) -> &u32 {
   |                                                                 ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-struct-async.rs:27:65
   |
LL |     async fn pin_ref_Struct(self: Pin<&mut Struct>, f: &u32) -> &u32 {
   |                                                                 ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-struct-async.rs:33:74
   |
LL |     async fn box_box_ref_Struct(self: Box<Box<&mut Struct>>, f: &u32) -> &u32 {
   |                                                                          ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-struct-async.rs:39:74
   |
LL |     async fn box_pin_ref_Struct(self: Box<Pin<&mut Struct>>, f: &u32) -> &u32 {
   |                                                                          ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error: cannot infer an appropriate lifetime
  --> $DIR/ref-mut-struct-async.rs:15:44
   |
LL |     async fn ref_Struct(self: &mut Struct, f: &u32) -> &u32 {
   |                                            ^           ---- this return type evaluates to the `'static` lifetime...
   |                                            |
   |                                            ...but this borrow...
   |
note: ...can't outlive the lifetime '_ as defined on the method body at 15:31
  --> $DIR/ref-mut-struct-async.rs:15:31
   |
LL |     async fn ref_Struct(self: &mut Struct, f: &u32) -> &u32 {
   |                               ^
help: you can add a constraint to the return type to make it last less than `'static` and match the lifetime '_ as defined on the method body at 15:31
   |
LL |     async fn ref_Struct(self: &mut Struct, f: &u32) -> &u32 + '_ {
   |                                                        ^^^^^^^^^

error: cannot infer an appropriate lifetime
  --> $DIR/ref-mut-struct-async.rs:21:53
   |
LL |     async fn box_ref_Struct(self: Box<&mut Struct>, f: &u32) -> &u32 {
   |                                                     ^           ---- this return type evaluates to the `'static` lifetime...
   |                                                     |
   |                                                     ...but this borrow...
   |
note: ...can't outlive the lifetime '_ as defined on the method body at 21:39
  --> $DIR/ref-mut-struct-async.rs:21:39
   |
LL |     async fn box_ref_Struct(self: Box<&mut Struct>, f: &u32) -> &u32 {
   |                                       ^
help: you can add a constraint to the return type to make it last less than `'static` and match the lifetime '_ as defined on the method body at 21:39
   |
LL |     async fn box_ref_Struct(self: Box<&mut Struct>, f: &u32) -> &u32 + '_ {
   |                                                                 ^^^^^^^^^

error: cannot infer an appropriate lifetime
  --> $DIR/ref-mut-struct-async.rs:27:53
   |
LL |     async fn pin_ref_Struct(self: Pin<&mut Struct>, f: &u32) -> &u32 {
   |                                                     ^           ---- this return type evaluates to the `'static` lifetime...
   |                                                     |
   |                                                     ...but this borrow...
   |
note: ...can't outlive the lifetime '_ as defined on the method body at 27:39
  --> $DIR/ref-mut-struct-async.rs:27:39
   |
LL |     async fn pin_ref_Struct(self: Pin<&mut Struct>, f: &u32) -> &u32 {
   |                                       ^
help: you can add a constraint to the return type to make it last less than `'static` and match the lifetime '_ as defined on the method body at 27:39
   |
LL |     async fn pin_ref_Struct(self: Pin<&mut Struct>, f: &u32) -> &u32 + '_ {
   |                                                                 ^^^^^^^^^

error: cannot infer an appropriate lifetime
  --> $DIR/ref-mut-struct-async.rs:33:62
   |
LL |     async fn box_box_ref_Struct(self: Box<Box<&mut Struct>>, f: &u32) -> &u32 {
   |                                                              ^           ---- this return type evaluates to the `'static` lifetime...
   |                                                              |
   |                                                              ...but this borrow...
   |
note: ...can't outlive the lifetime '_ as defined on the method body at 33:47
  --> $DIR/ref-mut-struct-async.rs:33:47
   |
LL |     async fn box_box_ref_Struct(self: Box<Box<&mut Struct>>, f: &u32) -> &u32 {
   |                                               ^
help: you can add a constraint to the return type to make it last less than `'static` and match the lifetime '_ as defined on the method body at 33:47
   |
LL |     async fn box_box_ref_Struct(self: Box<Box<&mut Struct>>, f: &u32) -> &u32 + '_ {
   |                                                                          ^^^^^^^^^

error: cannot infer an appropriate lifetime
  --> $DIR/ref-mut-struct-async.rs:39:62
   |
LL |     async fn box_pin_ref_Struct(self: Box<Pin<&mut Struct>>, f: &u32) -> &u32 {
   |                                                              ^           ---- this return type evaluates to the `'static` lifetime...
   |                                                              |
   |                                                              ...but this borrow...
   |
note: ...can't outlive the lifetime '_ as defined on the method body at 39:47
  --> $DIR/ref-mut-struct-async.rs:39:47
   |
LL |     async fn box_pin_ref_Struct(self: Box<Pin<&mut Struct>>, f: &u32) -> &u32 {
   |                                               ^
help: you can add a constraint to the return type to make it last less than `'static` and match the lifetime '_ as defined on the method body at 39:47
   |
LL |     async fn box_pin_ref_Struct(self: Box<Pin<&mut Struct>>, f: &u32) -> &u32 + '_ {
   |                                                                          ^^^^^^^^^

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0106`.
